# openai-realtime-agents

./: .env.example  .env.sample  .gitignore  .node-version  .npmrc  AGENT.md  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Interview_agent_dev_spec.md  LICENSE  MIGRATION_PLAN.md  MIGRATION_PLAN_CHECKLIST.md  README.md  SETUP_EMAIL.md  create_structure.sh  create_structure.sh .sh  docker-compose.yml  github_workflows_ethicalcheck.yml.txt  interviewee_ux_spec.md  jest.config.js  next.config.js  next.config.ts  package-lock.json  package.json  setup.py  setup.sh  tailwind.config.ts  tsconfig.json
.codex/: setup.sh
backend/: .env.example  .env.local.example  .env.test.example  .gitignore  Dockerfile  README.md  app.py  database.py  logging_config.py  main.py  middleware.py  pyproject.toml  pytest.ini  requirements-freeze.txt  requirements.txt  security.py  telemetry_config.py
backend/agent_personas/: simple_example.py
backend/app_agents/: __init__.py  agent_runner.py  llm_routes.py  orchestrator.py  registry.py  router.py  schemas.py  sdk_manager.py  sdk_routes.py  tools.py
backend/docs/: a2a_strategy.md  governance_strategy.md  ha_dr_strategy.md  kubernetes_deployment_guide.md  load_testing_strategy.md  monitoring_dashboard_alerting_strategy.md  mtls_strategy.md  phase1_summary.md  phase2_summary.md  phase3_summary.md  supabase_edge_functions.md
backend/models/: a2a_messages.py  ag_ui_messages.py  audit_log.py  conversation_history.py  mcp_messages.py  tool_definition.py
backend/oartagents_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+408 files in other folders)
